--- a/style.css
+++ b/style.css
@@ -31,9 +31,15 @@ button.delete {
 	color: #c00;
 }
 
-.messages {
-	font-weight: bold;
-	color: green;
+.message {
+	background-color: green;
+	color: white;
+	padding: 10px;
+
+	position: sticky;
+	top: 10px;
+	left: 10px;
+	right: 10px;
 }
 
 /**
