index filter styling+

--- a/style.css
+++ b/style.css
@@ -81,6 +81,21 @@ th[data-sort]:not([data-sorting]):after {
 }
 
 /**
+ * List filters
+ */
+
+.index-filters {
+	display: flex;
+}
+.index-filters > * {
+	flex: 1;
+	display: block;
+}
+.index-filters > * + * {
+	margin-left: .5em;
+}
+
+/**
  * List ratings
  */
 
