--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ th[data-sort]:not([data-sorting]):after {
 .index-filters > * {
 	flex: 1;
 	display: block;
+	width: 100%;
 }
 .index-filters > * + * {
 	margin-left: .5em;
