--- a/style.css
+++ b/style.css
@@ -292,10 +292,11 @@ input.pages {
 	color: #000;
 	max-width: calc(100vw - 20px);
 }
-#results a > * {
+#results a {
 	white-space: nowrap;
 	overflow: hidden;
-	text-overflow: ellipsis;
+	overflow-x: auto;
+	x-text-overflow: ellipsis;
 }
 #results li:nth-child(even) a {
 	background-color: #e7e7e7;
